Change Set.of() to Collections.emptySet(), since it has a more expressive name.